# Rest_API_Flask

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flaskrestful.py  mongo_flask_api.py  pyproject.toml  requirements.txt  run.py  run.py.py  start.sh  testMongo.py  vanilla_Flask.py
app/: run.py
